syntax = "proto3";

option csharp_namespace = "ow.Framework.IO.Network.Relay.Global.Protos.Requests";

package SessionHandler;

message RGSSessionRegisterRequest
{
		int32 Account = 1;
}
