syntax = "proto3";

option csharp_namespace = "ow.Framework.IO.Network.Relay.Global.Protos.Responses";

package SessionHandler;

message RGSSessionValidateResponse
{
		bool Result = 1;
}
